# lua-ls

./: .buildinfo  .cl-keeper.yaml  .coveragerc.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  apidoc.html  autodoc.html  directives.html  example.html  genindex.html  index.html  installation.html  lua-modindex.html  objects.inv  poe_tasks.toml  pyproject.toml  pytest.toml  quickstart.html  roles.html  search.html  searchindex.js  settings.html  tox.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
_sources/: autodoc.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  settings.rst.txt
docs/: Makefile
docs/example/: .emmyrc.json  logging.lua
docs/source/: apidoc.rst  autodoc.rst  conf.py  directives.rst  example.rst  index.rst  installation.rst  quickstart.rst  roles.rst  settings.rst  troubleshooring.rst
docs/source/example/: .emmyrc.json  logging.lua
pr-preview/pr-13/: .buildinfo  apidoc.html  autodoc.html  directives.html  example.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  roles.html  search.html  settings.html
pr-preview/pr-13/_sources/: autodoc.rst.txt  installation.rst.txt
pr-preview/pr-13/_static/: documentation_options.js
pr-preview/pr-14/: .buildinfo  apidoc.html  autodoc.html  directives.html  example.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  roles.html  search.html  settings.html
pr-preview/pr-14/_static/: documentation_options.js
pr-preview/pr-15/: .buildinfo  apidoc.html  autodoc.html  directives.html  example.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  roles.html  search.html  settings.html
pr-preview/pr-15/_static/: documentation_options.js
pr-preview/pr-16/: .buildinfo  apidoc.html  autodoc.html  directives.html  example.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  roles.html  search.html  searchindex.js  settings.html
pr-preview/pr-16/_static/: documentation_options.js
pr-preview/pr-7/: .buildinfo  apidoc.html  autodoc.html  directives.html  example.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  roles.html  search.html  settings.html
pr-preview/pr-7/_static/: documentation_options.js
pr-preview/pr-8/: .buildinfo  apidoc.html  autodoc.html  directives.html  example.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  roles.html  search.html  settings.html
pr-preview/pr-8/_sources/: directives.rst.txt
pr-preview/pr-8/_static/: documentation_options.js
sphinx_lua_ls/: __init__.py  apidoc.py  autodoc.py  autoindex.py  config.py  doctree.py  domain.py  inherited.py  intersphinx.py  lua_ls.py  nodes.py  objtree.py  pygments.py  utils.py
sphinx_luals/: __init__.py  autodoc.py  doctree.py  domain.py  intersphinx.py  luals.py
test/: conftest.py  test_parse.py  test_regression.py  test_versions.py
test/roots/test-apidoc/: conf.py  index.rst
test/roots/test-apidoc/api/: .gitignore
test/roots/test-apidoc/lua/: mod.lua
test/roots/test-apidoc/lua/mod/: inner.lua
test/roots/test-autodoc/: conf.py  index.rst
test/roots/test-autodoc-disabled/: conf.py  index.rst
test/roots/test-autodoc-emmylua/: conf.py  index.rst
test/roots/test-autodoc-emmylua/lua/: .emmyrc.json  annotations.lua  doctype.lua  global_tables.lua  globals.lua  globals_2.lua  incongruent_export.lua  member_ordering.lua  module_function.lua  module_title.lua  nested_modules.lua  nesting.lua  object_types.lua  relative_resolve.lua  signatures.lua  using.lua
test/roots/test-autodoc-emmylua/lua/foo/: x.lua
test/roots/test-autodoc-emmylua/src/: annotations.rst  autoindex.rst  doctype.rst  global_tables.rst  incongruent_export.rst  member_ordering.rst  module_function.rst  module_title.rst  nesting_recursive.rst  object_types.rst  relative_resolve.rst  require.rst  signatures.rst  using.rst
test/roots/test-autodoc-roots/: conf.py  index.rst
test/roots/test-autodoc-roots/root_2/: autodoc.lua
test/roots/test-autodoc-settings/: conf.py  index.rst
test/roots/test-autodoc-settings-override/: conf.py  index.rst
test/roots/test-autodoc-settings-override/lua/: autodoc.lua
test/roots/test-autodoc-settings/lua/: autodoc.lua
test/roots/test-autodoc/lua/: annotations.lua  globals.lua  globals_2.lua  member_ordering.lua  module_title.lua  nested_modules.lua  nesting.lua  object_types.lua  relative_resolve.lua
test/roots/test-autodoc/src/: annotations.rst  autoindex.rst  globals.rst  nested_modules.rst  nesting.rst  object_types.rst  unknown_object.rst
test/roots/test-doc/: conf.py  index.rst  mod.lua
test/roots/test-doc/src/: annotations.rst  autodoc.rst  autoindex.rst  directives.rst  inherited.rst  intersphinx.rst  modules.rst  refs.rst
test/roots/test-intersphinx/: conf.py  index.rst
test/test_regression/: annotations.html  apidoc-md-sep.yml  apidoc-md.yml  apidoc-rst-sep.yml  apidoc-rst.yml  autodoc-annotations.html  autodoc-autoindex.html  autodoc-emmylua-annotations.html  autodoc-emmylua-autoindex.html  autodoc-emmylua-doctype.html  autodoc-emmylua-global_tables.html  autodoc-emmylua-globals.html  autodoc-emmylua-incongruent_export.html  autodoc-emmylua-index.html  autodoc-emmylua-member_ordering.html  autodoc-emmylua-module_function.html  autodoc-emmylua-module_title.html  autodoc-emmylua-nested_modules.html  autodoc-emmylua-nesting.html  autodoc-emmylua-nesting_recursive.html  autodoc-emmylua-object_types.html  autodoc-emmylua-relative_resolve.html  autodoc-emmylua-require.html  autodoc-emmylua-signatures.html  autodoc-emmylua-using.html  autodoc-globals.html  autodoc-member_ordering.html  autodoc-module_title.html  autodoc-nested_modules.html  autodoc-nesting.html  autodoc-nesting_recursive.html  autodoc-object_types.html  autodoc-relative_resolve.html  autodoc-roots-default.html  autodoc-roots-default.html.html  autodoc-roots-no-roots.html  autodoc-roots-single-root.html  autodoc-roots-single-root.html.html  autodoc-settings-annotation.html.html  autodoc-settings-no-recursion.html  (+13 more)
(+23 files in other folders)
