[project]
name = "sphinx-lua-ls"
authors = [{name = "Tamika Nomara", email = "taminomara@gmail.com"}]
description = "Automatic documentation generation via EmmyLua/LuaLs"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Domain",
    "Framework :: Sphinx :: Extension",
    "Topic :: Software Development :: Documentation",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Typing :: Typed",
]
dependencies = [
    "sphinx>=8.0,<10.0",
    "PyGithub>=1.59,<3.0",
    "requests~=2.31",
]

[dependency-groups]
dev = [
    "pytest-cov==7.0.0",
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "doc"},
]
lint = [
    "black==25.11.0",
    "isort==7.0.0",
    "pre-commit==4.5.0",
]
test = [
    "pyright==1.1.407",
    "pytest==9.0.1",
    "sybil==9.2.0",
    "pytest-regressions==2.8.3",
    "beautifulsoup4==4.14.3",
    "myst-parser==4.0.1"
]
doc = [
    "sybil==9.2.0",
    "furo==2025.9.25",
    "sphinx_design==0.6.1",
    "myst-parser==4.0.1"
]

[project.urls]
Documentation = "https://sphinx-lua-ls.readthedocs.io/en/stable/"
Issues = "https://github.com/sphinx-contrib/lua-ls/issues"
Source = "https://github.com/sphinx-contrib/lua-ls/"
Changelog = "https://github.com/sphinx-contrib/lua-ls/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=60", "setuptools_scm[toml]>=8", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "sphinx_lua_ls/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--strict-markers", "-p no:doctest"]
testpaths = ["test", "sphinx_lua_ls", "docs"]

[tool.pyright]
include = ["sphinx_lua_ls"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "All"

# deprecateTypingAliases = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedFunction = "none"
reportPrivateUsage = "none"
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryIsInstance = "none"
reportConstantRedefinition = "none"
reportRedeclaration = "none"

[tool.isort]
profile = "black"
skip_gitignore = true
